# Test-alani

./: .replit  CONTRIBUTING.md  LICENSE  README.md  create_zip.py  doxagon.db  main.py  pyproject.toml  web_api.py
archive/: system_config.json
attached_assets/: Pasted-PS-C-Users-alios-Klas-r-i-eri-ini-kontrol-et-PS-C-Users-alios-dir-Directory-C-User-1756774786666_1756774786667.txt  Pasted-Windows-PowerShell-Copyright-C-Microsoft-Corporation-All-rights-reserved-Install-the-latest--1756774565962_1756774565962.txt  Pasted-Windows-PowerShell-Copyright-C-Microsoft-Corporation-All-rights-reserved-Install-the-latest--1756774933532_1756774933533.txt
doxagon_storage/: enterprise_config.json
files/: metadata.json
files/7/: app_Personel_Asistanı_Streamli_20250828_1.txt  doctype_html_html_lang_20250828_2.html
